// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Doc Contents Integration Test query doc content again by ID 1`] = `
Object {
  "body": "{ \\"id\\": \\"doc0009\\", \\"type\\": \\"Bill Lay Ding\\", \\"ref\\": \\"ref0009\\" }",
}
`;

exports[`Doc Contents Integration Test query doc content by ID 1`] = `
Object {
  "format": "PDF",
  "link": "localhost/docontent0008",
}
`;

exports[`Document Integration Test query commits of document 1`] = `
Array [
  Object {
    "entityName": "int_test_document",
    "events": Array [
      Object {
        "type": "DocumentCreated",
      },
      Object {
        "type": "DocumentReferenceDefined",
      },
      Object {
        "type": "DocumentLoanIdDefined",
      },
      Object {
        "type": "DocumentTitleDefined",
      },
    ],
  },
]
`;

exports[`Document Integration Test query eocument by ID 1`] = `
Object {
  "reference": "DOC0101",
  "status": 0,
  "title": "Test Title 101",
}
`;

exports[`Document Integration Test query focument by ID 1`] = `
Object {
  "reference": "DOC0102",
  "status": 0,
  "title": "Test Title 102",
}
`;

exports[`Document Integration Test query gocument by ID 1`] = `
Object {
  "reference": "DOC0103",
  "status": 0,
  "title": "Test Title 103",
}
`;

exports[`Federated queries federated query doc contents by ID 1`] = `
Object {
  "content": Object {
    "format": "PDF",
    "link": "localhost/docontent0008",
  },
  "document": Object {
    "reference": "DOC0102",
    "status": 1,
    "title": "Test Title 102",
  },
}
`;

exports[`Federated queries federated query document by ID 1`] = `
Object {
  "contents": Object {
    "content": Object {
      "format": "PDF",
      "link": "localhost/docontent0008",
    },
  },
  "loan": Object {
    "description": "loan-description-1",
    "reference": "MYLOAN0001",
    "status": 0,
  },
  "reference": "DOC0102",
  "status": 1,
  "title": "Test Title 102",
}
`;

exports[`Federated queries federated query loan by ID 1`] = `
Object {
  "description": "loan-description-1",
  "details": Object {
    "contact": Object {
      "contactName": "Hook",
      "email": "hook@fake.it",
      "phone": "555-23456",
    },
    "currency": "HKD",
    "loanType": "Post-shipment",
    "requestedAmt": 70000,
    "requester": Object {
      "companyName": "Peter Hook Ltd",
      "registration": "BR000000X",
    },
    "startDate": "2019-10-12",
    "tenor": 60,
  },
  "documents": Array [
    Object {
      "reference": "DOC0101",
      "status": 0,
      "title": "Test Title 101",
    },
    Object {
      "reference": "DOC0102",
      "status": 1,
      "title": "Test Title 102",
    },
  ],
  "reference": "MYLOAN0001",
  "status": 0,
}
`;

exports[`Federated queries federated query loan details by ID 1`] = `
Object {
  "approvedAmt": null,
  "comment": null,
  "contact": Object {
    "email": "pete@fake.it",
    "name": "Pete",
    "phone": "555-12345",
    "salutation": "Mr.",
    "title": "Owner",
  },
  "currency": "HKD",
  "loan": Object {
    "description": "test-description",
    "reference": "MYLOAN0001",
    "status": 0,
  },
  "loanType": "Post-shipment",
  "requestedAmt": 50000,
  "requester": Object {
    "name": "Pete N Co. Ltd",
    "registration": "BR0000001",
    "type": "Money Launderer",
  },
  "startDate": "2019-10-11",
  "tenor": 60,
}
`;

exports[`Loan Details Integration Test query loan details again by ID 1`] = `
Object {
  "approvedAmt": null,
  "comment": null,
  "contact": Object {
    "email": "crime@fake.it",
    "name": "Locke",
    "phone": "555-33457",
    "salutation": "Mr.",
    "title": "Owner",
  },
  "currency": "HKD",
  "loanType": "Post-shipment",
  "requestedAmt": 210000,
  "requester": Object {
    "name": "John Locke Ltd",
    "registration": "BR000000Y",
    "type": "Gangster",
  },
  "startDate": "2019-10-13",
  "tenor": 77,
}
`;

exports[`Loan Details Integration Test query loan details by ID 1`] = `
Object {
  "approvedAmt": null,
  "comment": null,
  "contact": Object {
    "email": "hook@fake.it",
    "name": "Hook",
    "phone": "555-23456",
    "salutation": "Mr.",
    "title": "Owner",
  },
  "currency": "HKD",
  "loanType": "Post-shipment",
  "requestedAmt": 70000,
  "requester": Object {
    "name": "Peter Hook Ltd",
    "registration": "BR000000X",
    "type": "Money Launderer",
  },
  "startDate": "2019-10-12",
  "tenor": 60,
}
`;

exports[`Loan Integration Test query commits of loan 1`] = `
Array [
  Object {
    "entityName": "int_test_loan",
    "events": Array [
      Object {
        "type": "LoanApplied",
      },
      Object {
        "type": "LoanReferenceDefined",
      },
      Object {
        "type": "LoanDescriptionDefined",
      },
    ],
  },
]
`;

exports[`Loan Integration Test query loan by ID 1`] = `
Object {
  "description": "loan-description-1",
  "reference": "MYLOAN0001",
  "status": 0,
}
`;

exports[`User Integration Test query commits of user 1`] = `
Array [
  Object {
    "entityName": "int_test_user",
    "events": Array [
      Object {
        "type": "UserCreated",
      },
    ],
  },
]
`;

exports[`User Integration Test query paginated user 1`] = `
Object {
  "getPaginatedUser": Object {
    "entities": Array [
      "The new User 2",
      "The new User 3",
      "The new User",
    ],
    "hasMore": false,
    "total": 3,
  },
}
`;
